# ensure-sops

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
ensure_sops/: __init__.py  enums.py  exceptions.py  formats.py  main.py  validator.py
tests/: conftest.py  test_formats.py  test_main.py  test_validator.py
tests/files/: test.env  test.ini  test.json  test.yaml
